# libbitsub

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  jsr.json  mise.toml  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: build.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  utils.rs
crates/core/src/pgs/: composition.rs  display_set.rs  mod.rs  object.rs  palette.rs  parser.rs  rle.rs  segment.rs
crates/core/src/testfiles/: vobsub.mks  vobsub.sub
crates/core/src/vobsub/: deband.rs  idx_parser.rs  mks_parser.rs  mod.rs  rle.rs  sub_parser.rs  vobsub_parser.rs
references/: api.md
src/: index.ts  lib.rs  renderer.rs  utils.rs  wrapper.ts
src/pgs/: composition.rs  display_set.rs  mod.rs  object.rs  palette.rs  parser.rs  rle.rs  window.rs
src/testfiles/: vobsub.idx
src/ts/: diagnostics.ts  frame-export.ts  index.ts  parsers.ts  renderers.ts  types.ts  utils.test.ts  utils.ts  wasm.ts  webgl2-renderer.ts  webgpu-renderer.ts  worker.ts
src/vobsub/: deband.rs  idx_parser.rs  mks_parser.rs  mod.rs  rle.rs  sub_parser.rs  vobsub_parser.rs
