[package]
name = "libbitsub"
version = "1.6.0"
edition = "2024"
authors = ["altqx"]
license = "MIT"
description = "High-performance WASM renderer for graphical subtitles (PGS and VobSub)"
repository = "https://github.com/altqx/libbitsub"
keywords = ["pgs", "vobsub", "subtitle", "wasm", "rendering"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.111"
js-sys = "0.3.88"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
byteorder = "1.5.0"
memchr = "2.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.61"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
