[package]
name = "libbitsub"
version = "1.10.0"
edition = "2024"
rust-version = "1.85"
authors = ["altqx"]
license = "MIT"
description = "High-performance WASM renderer for graphical subtitles (PGS and VobSub)"
readme = "README.md"
repository = "https://github.com/altqx/libbitsub"
keywords = ["pgs", "vobsub", "subtitle", "wasm", "rendering"]
categories = ["multimedia::video", "parser-implementations", "wasm"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/lib.rs",
]

[workspace]
members = ["crates/core"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.122"
js-sys = "0.3.99"
console_error_panic_hook = { version = "0.1.7", optional = true }
dlmalloc = { version = "0.2.14", features = ["global"] }
libbitsub-core = { version = "1.10.0", path = "crates/core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.72"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
